[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relational-memory"
version = "0.1.0"
description = "A relationship-aware memory layer for LLM chatbots"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Florian Keusch"}]
readme = "README.md"
dependencies = ["anthropic>=0.20.0"]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[project.scripts]
relational-memory = "relational_memory.__main__:main"

[project.urls]
Homepage = "https://github.com/spectator81-png/relational-memory"

[tool.setuptools.packages.find]
include = ["relational_memory*"]

[tool.setuptools.package-data]
relational_memory = ["prompts/*.md"]
